--- a/src/assets/scss/Home/merchandise.scss
+++ b/src/assets/scss/Home/merchandise.scss
@@ -97,37 +97,56 @@
       }
     }
   }
-  
-  .card_mobile {
-    width: 80%;
-    height: auto;
-    display: flex;
-    align-items: center;
-    margin: 5px 20px;
-    background: $--orange-100;
-    background-color: $--yellow-50;
-    margin: 10px 50px;
+}
 
-    img {
-      width: 35vw;
-      height: auto;
-      padding: 0 10px;
-      border-right: 5px solid $--orange-100;
+:deep(.swiper-area) {
+  max-width: 100%;
+  height: auto;
+  .swiper-container{
+    @media screen and (max-width: $screen-xs) {
+      min-height: 80vw;
     }
-    .description {
-      position: relative;
+    min-height: 40vw;
+    height: auto;
+    .swiper-wrapper {
+      height: auto;
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
+    .swiper-slide {
       width: 100%;
       height: auto;
-      text-align: left;
-
-      .item-content {
-        font-size: 1rem;
-        margin: 20px;
-
-        span {
-          font-size: 1.5rem;
-          padding-bottom: 200px;
-          font-weight: bolder;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      img {
+        width: 50vw;
+        @media screen and (max-width: $screen-xs) {
+          width: 70vw;
+        }
+        height: auto;
+        border-radius: 10%;
+        border: 10px solid rgba($--orange-100, .3);
+      }
+      .description {
+        position: relative;
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+  
+        .item-content {
+          font-size: 1rem;
+          margin: 20px;
+  
+          span {
+            font-size: 1.5rem;
+            font-weight: bolder;
+          }
         }
       }
     }
