--- a/src/assets/scss/Home/news.scss
+++ b/src/assets/scss/Home/news.scss
@@ -30,6 +30,12 @@
     text-decoration: none;
     text-align: center;
     color: $--white;
+    padding: 10px;
+    border: 2px solid $--white;
+    transition: all 0.3s ease-in-out;
+    &:hover{
+      transform: translateY(-5px);
+    }
   }
 
   @media screen and (max-width: $screen-sm) {
